trying fix on detail panem portfolio page hero image stretch on safari

--- a/assets/scss/_portfolio-pages.scss
+++ b/assets/scss/_portfolio-pages.scss
@@ -438,7 +438,8 @@
 			}
 		}
 		img#detailpanem-hero {
-			max-width:100%;
+			width:100%;
+			height:auto !important;
 		}
 		ul.goals-list {
 			@media screen and (min-width:992px) {
